# webassembly-openworld-game

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
assets/shaders/: cube.wgsl  noise.wgsl  structure.wgsl  terrain.wgsl  triangle.wgsl  vegetation_compute.wgsl  vegetation_render.wgsl
docs/: README.md
docs/01_STANDARDS/: coordinate_systems.md  data_layout.md
docs/02_ARCHITECTURE/: engine_loop.md  threading_model.md  world_gen_strategy.md
docs/03_SUBSYSTEMS/: renderer_deferred.md  terrain_compute.md
docs/04_TASKS/: task_01_core_init.md  task_02_game_loop.md  task_03_hello_triangle.md  task_04_3d_camera.md  task_05_compute_particles.md  task_06_terrain_mesh.md  task_07_infinite_terrain.md  task_09_world_gen_macro.md  task_10_multi_chunk.md  task_11_biomes.md  task_12_vegetation.md  task_13_5_debug_tools.md  task_13_structures.md  task_template.md
src/: main.rs
src/core/: gui.rs  mod.rs  time.rs
src/core/assets/: mod.rs
src/core/renderer/: camera.rs  chunk.rs  context.rs  geometry.rs  mod.rs  structures.rs  terrain.rs  texture.rs  vegetation.rs
src/game/: mod.rs  state.rs
