[package]
name = "aether-engine"
version = "0.1.0"
edition = "2021"
authors = ["Aether Engine Team"]
description = "High-performance open-world 3D game engine built with Rust and WebGPU"

[dependencies]
winit = "0.30"
wgpu = "23"
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
image = { version = "0.25", default-features = true }
gltf = "1.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "Performance"] }

[profile.release]
lto = true
opt-level = 3
